Bug 484395 - "New"-icon missing
Summary: "New"-icon missing
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 2.9.71
Platform: openSUSE Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
: 493320 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-24 16:39 UTC by Nihin Dula
Modified: 2024-09-18 19:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (50.58 KB, image/jpeg)
2024-03-24 16:39 UTC, Nihin Dula
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nihin Dula 2024-03-24 16:39:05 UTC
Created attachment 167708 [details]
screenshot

OpenSUSE Leap 15.5
amarok-2.9.75git.20221114T020258~457db492b4-bp155.1.12.x86_64

In Podcasts the icon, which marks a new episode (yellow star), is missing. Very annoying.
Comment 1 Nihin Dula 2024-03-24 16:41:14 UTC
OpenSUSE Leap 15.5
amarok-2.9.75git.20221114T020258~457db492b4-bp155.1.12.x86_64

In Podcasts the icon, which marks a new episode (yellow star), is missing. Very annoying.
Please see attachment screenshot.
Comment 2 Bug Janitor Service 2024-03-25 10:00:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/69
Comment 3 Tuomas Nurmi 2024-03-27 12:42:42 UTC
Git commit 7feb30b52cb7f48cfd855d742b891e34acf8700c by Tuomas Nurmi.
Committed on 27/03/2024 at 12:36.
Pushed by nurmi into branch 'master'.

Fix new and generic podcast icons.

Provide a functional KIconLoader to get KIconEngine actually work.
The new podcast indicators and the generic podcast icon probably haven't
ever worked in KF5 versions yet. It seems to have used KIcon in KDE4,
which probably didn't require providing that kind of parameters.

M  +4    -3    src/browsers/playlistbrowser/PodcastModel.cpp

https://invent.kde.org/multimedia/amarok/-/commit/7feb30b52cb7f48cfd855d742b891e34acf8700c
Comment 4 Tuomas Nurmi 2024-09-18 19:42:25 UTC
*** Bug 493320 has been marked as a duplicate of this bug. ***