Fix new and generic podcast icons.

Provide a functional KIconLoader to get KIconEngine actually work.
The new podcast indicators and the generic podcast icon probably haven't
ever worked in KF5 versions yet. It seems to have used KIcon in KDE4,
which probably didn't require providing that kind of parameters.

BUG: 484395